--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "node app.js"
+    "dev": "node app.js",
+    "test": "node test.js"
   },
   "keywords": ["node", "express", "docker", "devops"],
   "author": "DevOps Team",
